# financial-ner-beto-lora

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dvc.yaml  inference.py  pyproject.toml  requirements-dev.in  requirements.in
configs/: model_config.yaml
data/raw/: financial_ner_dataset.json
docs/ejemplos_txt/: ejemplo1.txt  ejemplo2.txt  ejemplo3.txt  ejemplo_parrafo1.txt  ejemplo_parrafo2.txt  ejemplo_parrafo_largo.txt  ejemplo_parrafo_mixto.txt  ejemplo_sin_entidades.txt
models/: metrics_r16.json  metrics_r32.json  metrics_r8.json  seqeval_scores.json
models/ner_lora_r16/lora_weights/: README.md  adapter_config.json  adapter_model.safetensors  tokenizer.json
models/ner_lora_r32/lora_weights/: adapter_config.json
models/ner_lora_r8/lora_weights/: adapter_config.json  adapter_model.safetensors
notebooks/: eda_dataset.ipynb
scripts/: evaluate.py  generate_dataset.py  prepare_data.py  train.py
src/financial_ner/: __init__.py
src/financial_ner/data/: alignment.py  generate_dataset.py  labels.py  schema.py  split.py  templates.py  vocabularies.py
src/financial_ner/evaluation/: metrics.py  mlflow_logger.py
src/financial_ner/model/: lora_model.py
tests/unit/: test_alignment.py  test_generate_dataset.py  test_inference.py  test_labels.py  test_schema.py  test_split.py  test_templates.py
