[project]
name = "financial-ner-beto-lora"
version = "0.1.0"
description = "NER Financiero en español con BETO + LoRA — Proyecto Final Módulo 2 ITAM"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.2.0,<3.0",
    "transformers>=4.40.0,<5.0",
    "peft>=0.10.0,<1.0",
    "datasets>=2.18.0,<4.0",
    "accelerate>=0.30.0,<1.0",
    "seqeval>=1.2.2,<2.0",
    "evaluate>=0.4.0,<1.0",
    "scikit-learn>=1.3,<2.0",
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "mlflow>=2.9.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pandera>=0.21.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
    "pre-commit>=3.5,<4.0",
    "pip-tools>=7.4,<8.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ─────────────────────────────────────────────────────────────
# ruff — linter + formatter
# ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "E501",   # líneas largas — controlado por line-length
    "B008",   # llamadas a funciones en argumentos por defecto
    "E402",   # imports no al inicio — necesario en scripts con sys.path.insert
    "N803",   # argumento X en mayúscula — convención ML
    "N806",   # variable X en función — convención ML
]

[tool.ruff.lint.isort]
known-first-party = ["financial_ner"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
